--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node routes.js",
-    "server":"nodemon route.js",
+    "start":"node routes/routes.js",
+    "server":"nodemon routes.js",
     "frontend":"npm start --prefix frontend",
     "dev" : "concurrently \"npm start\" \"npm run frontend\" "
    
